@@ -296,9 +296,9 @@ public class TestPlugins {
         try {
             for (TestPackage testPackage : TestPackage.values()) {
                 if (pluginJars.containsKey(testPackage)) {
-                    log.debug("Skipping recompilation of " + testPackage.resourceDir());
+                    log.debug("Skipping recompilation of {}", testPackage.resourceDir());
                 }
-                pluginJars.put(testPackage, createPluginJar(testPackage.resourceDir(), testPackage.removeRuntimeClasses()));
+                pluginJars.put(testPackage, createPluginJar(testPackage.resourceDir(), testPackage.removeRuntimeClasses(), Collections.emptyMap()));
             }
         } catch (Throwable e) {
             log.error("Could not set up plugin test jars", e);
@@ -376,9 +376,7 @@ public class TestPlugins {
     }
 
     public static Function<ClassLoader, LoaderSwap> noOpLoaderSwap() {
-        return classLoader -> {
-            return new LoaderSwap(Thread.currentThread().getContextClassLoader());
-        };
+        return classLoader -> new LoaderSwap(Thread.currentThread().getContextClassLoader());
     }
 
     private static TestPlugin[] defaultPlugins() {
@@ -387,10 +385,11 @@ public class TestPlugins {
                 .toArray(TestPlugin[]::new);
     }
 
-    private static Path createPluginJar(String resourceDir, Predicate<String> removeRuntimeClasses) throws IOException {
+
+    static Path createPluginJar(String resourceDir, Predicate<String> removeRuntimeClasses, Map<String, String> replacements) throws IOException {
         Path inputDir = resourceDirectoryPath("test-plugins/" + resourceDir);
         Path binDir = Files.createTempDirectory(resourceDir + ".bin.");
-        compileJavaSources(inputDir, binDir);
+        compileJavaSources(inputDir, binDir, replacements);
         Path jarFile = Files.createTempFile(resourceDir + ".", ".jar");
         try (JarOutputStream jar = openJarFile(jarFile)) {
             writeJar(jar, inputDir, removeRuntimeClasses);
@@ -430,7 +429,7 @@ public class TestPlugins {
             classFiles = stream
                     .sorted(Comparator.reverseOrder())
                     .map(Path::toFile)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         for (File classFile : classFiles) {
             if (!classFile.delete()) {
@@ -450,7 +449,7 @@ public class TestPlugins {
      * @param sourceDir Directory containing java source files
      * @throws IOException if the files cannot be compiled
      */
-    private static void compileJavaSources(Path sourceDir, Path binDir) throws IOException {
+    private static void compileJavaSources(Path sourceDir, Path binDir, Map<String, String> replacements) throws IOException {
         JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
         List<File> sourceFiles;
         try (Stream<Path> stream = Files.walk(sourceDir)) {
@@ -458,13 +457,14 @@ public class TestPlugins {
                     .filter(Files::isRegularFile)
                     .map(Path::toFile)
                     .filter(file -> file.getName().endsWith(".java"))
+                    .map(file -> replacements.isEmpty() ? file : copyAndReplace(file, replacements))
                     .collect(Collectors.toList());
         }
+
         StringWriter writer = new StringWriter();
         List<String> options = Arrays.asList(
             "-d", binDir.toString() // Write class output to a different directory.
         );
-
         try (StandardJavaFileManager fileManager = compiler.getStandardFileManager(null, null, null)) {
             boolean success = compiler.getTask(
                 writer,
@@ -480,6 +480,21 @@ public class TestPlugins {
         }
     }
 
+    private static File copyAndReplace(File source, Map<String, String> replacements) throws RuntimeException {
+        try {
+            String content = Files.readString(source.toPath());
+            for (Map.Entry<String, String> entry : replacements.entrySet()) {
+                content = content.replace(entry.getKey(), entry.getValue());
+            }
+            File tmpFile = new File(System.getProperty("java.io.tmpdir") + File.separator + source.getName());
+            Files.writeString(tmpFile.toPath(), content);
+            tmpFile.deleteOnExit();
+            return tmpFile;
+        } catch (IOException e) {
+            throw new RuntimeException("Could not copy and replace file: " + source, e);
+        }
+    }
+
     private static void writeJar(JarOutputStream jar, Path inputDir, Predicate<String> removeRuntimeClasses) throws IOException {
         List<Path> paths;
         try (Stream<Path> stream = Files.walk(inputDir)) {
@@ -487,7 +502,7 @@ public class TestPlugins {
                     .filter(Files::isRegularFile)
                     .filter(path -> !path.toFile().getName().endsWith(".java"))
                     .filter(path -> !removeRuntimeClasses.test(path.toFile().getName()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         for (Path path : paths) {
             try (InputStream in = new BufferedInputStream(Files.newInputStream(path))) {
@@ -505,5 +520,4 @@ public class TestPlugins {
             }
         }
     }
-
 }
